--- a/Serilog_Poc/appsettings.Development.json
+++ b/Serilog_Poc/appsettings.Development.json
@@ -8,6 +8,10 @@
   "Serilog": {
     "Enrich": [ "FromLogContext" ],
     "MinimumLevel": "Debug",
+    "Properties": {
+      "Application": "API Serilog",
+      "Environment": "Development"
+    },
     "Filter": [
       {
         "Name": "ByExcluding",
