--- a/Serilog_Poc/appsettings.json
+++ b/Serilog_Poc/appsettings.json
@@ -9,6 +9,10 @@
   "Serilog": {
     "Enrich": [ "FromLogContext" ],
     "MinimumLevel": "Warning",
+    "Properties": {
+      "Application": "API Serilog",
+      "Environment": "Production"
+    },
     "Filter": [
       {
         "Name": "ByExcluding",
