--- a/Web_Framework_Poc/packages.config
+++ b/Web_Framework_Poc/packages.config
@@ -7,13 +7,46 @@
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.ScriptManager.MSAjax" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.ScriptManager.WebForms" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization.WebForms" version="1.1.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyModel" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="Serilog" version="2.12.0" targetFramework="net472" />
+  <package id="Serilog.Enrichers.Environment" version="2.2.0" targetFramework="net472" />
+  <package id="Serilog.Enrichers.Process" version="2.0.2" targetFramework="net472" />
+  <package id="Serilog.Enrichers.Thread" version="3.1.0" targetFramework="net472" />
+  <package id="Serilog.Extensions.Logging" version="3.1.0" targetFramework="net472" />
+  <package id="Serilog.Settings.Configuration" version="3.4.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.Async" version="1.5.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.Console" version="4.1.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.Debug" version="2.0.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.File" version="5.0.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
