--- a/ClassLibrary1/packages.config
+++ b/ClassLibrary1/packages.config
@@ -1,8 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NPOI" version="2.5.6" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.2" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net472" />
-  <package id="Serilog" version="2.10.0" targetFramework="net472" />
+  <package id="Serilog" version="2.11.0" targetFramework="net472" />
+  <package id="Serilog.Enrichers.Environment" version="2.2.0" targetFramework="net472" />
+  <package id="Serilog.Enrichers.Process" version="2.0.2" targetFramework="net472" />
+  <package id="Serilog.Enrichers.Thread" version="3.1.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.Async" version="1.5.0" targetFramework="net472" />
   <package id="Serilog.Sinks.Console" version="4.1.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.Debug" version="2.0.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.File" version="5.0.0" targetFramework="net472" />
   <package id="SharpZipLib" version="1.3.3" targetFramework="net472" />
+  <package id="SimpleInjector" version="5.4.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
 </packages>
