--- a/Web_Framework_Poc/packages.config
+++ b/Web_Framework_Poc/packages.config
@@ -39,6 +39,9 @@
   <package id="Serilog.Sinks.Console" version="4.1.0" targetFramework="net472" />
   <package id="Serilog.Sinks.Debug" version="2.0.0" targetFramework="net472" />
   <package id="Serilog.Sinks.File" version="5.0.0" targetFramework="net472" />
+  <package id="SimpleInjector" version="5.0.0" targetFramework="net472" />
+  <package id="SimpleInjector.Integration.Web" version="5.0.0" targetFramework="net472" />
+  <package id="SimpleInjector.Integration.Web.Mvc" version="5.0.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
@@ -47,6 +50,8 @@
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="Unity.Abstractions" version="3.3.0" targetFramework="net472" />
+  <package id="Unity.Container" version="5.8.6" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
