--- a/Web_Framework_Poc/packages.config
+++ b/Web_Framework_Poc/packages.config
@@ -13,16 +13,17 @@
   <package id="Microsoft.AspNet.ScriptManager.WebForms" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization.WebForms" version="1.1.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebFormsDependencyInjection.Unity" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration" version="2.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="3.1.29" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.29" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.29" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyModel" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="3.1.29" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="net472" />
@@ -39,11 +40,8 @@
   <package id="Serilog.Sinks.Console" version="4.1.0" targetFramework="net472" />
   <package id="Serilog.Sinks.Debug" version="2.0.0" targetFramework="net472" />
   <package id="Serilog.Sinks.File" version="5.0.0" targetFramework="net472" />
-  <package id="SimpleInjector" version="5.0.0" targetFramework="net472" />
-  <package id="SimpleInjector.Integration.Web" version="5.0.0" targetFramework="net472" />
-  <package id="SimpleInjector.Integration.Web.Mvc" version="5.0.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
